# maya-math-nodes

./: .gitignore  .travis.yml  CMakeLists.txt  MayaMathNodes.mod.in  README.md  maya-math-nodes.pkgproj  post_install.sh
.github/workflows/: build.yml
cmake/: FindMaya.cmake
docs/: Makefile
docs/source/: conf.py  expressionLanguage.rst  expression_language.rst  index.rst  nodeReference.rst  node_reference.rst
python/maya_math_nodes/: __init__.py  expression_builder.py  expression_info.py  expression_lexer.py  expression_parser.py  info.py  math_expression.py
python/test/: __init__.py  __main__.py  expression_test_case.py  test_expression.py
src/: Absolute.h  Add.h  Angle.h  Array.h  Clamp.h  Condition.h  Convert.h  Debug.h  Distance.h  Divide.h  Interpolate.h  Inverse.h  Lerp.h  MinMax.h  Multiply.h  Negate.h  Plugin.cpp  Power.h  Round.h  Subtract.h  Trig.h  Twist.h  Utils.h  VectorOps.h
tests/: __main__.py  node_test_case.py  test_absolute.py  test_add.py  test_array.py  test_clamp.py  test_condition.py  test_convert.py  test_distance.py  test_divide.py  test_interpolate.py  test_inverse.py  test_min_max.py  test_multiply.py  test_negate.py  test_power.py  test_round.py  test_subtract.py  test_trig.py  test_twist.py  test_vector_ops.py
